--- a/src/assets/styles/components/_m-card.scss
+++ b/src/assets/styles/components/_m-card.scss
@@ -21,6 +21,7 @@ $root-block-name: '.mcard';
   &--mainpage,
   &--product-detail-one {
     min-height: 636px;
+    box-shadow: 0px 12px 30px 0px #00000026;
   }
 
   &--memberCenter {
@@ -36,22 +37,20 @@ $root-block-name: '.mcard';
   &__header {
     padding: 16px 0;
     height: 74px;
-    background: linear-gradient(270.06deg, #e2b64b 0.06%, #eb9838 99.98%);
-    @include flex(center);
+    background: #c2f6f6;
+
+    @include flex(center, center);
 
     #{$p__text} {
-      font-size: 26px;
+      font-size: 30px;
       font-weight: 400;
-
-      color: #fff;
-      text-shadow: -2px 0 1px #000, 0 2px 1px #000, 2px 0 1px #000,
-        0 -2px 1px #000;
+      color: #2a88cb;
     }
   }
 
   &__content {
     flex: 1;
-    background: #ffe7cc;
+    background: #fff;
     @include flex(null, null, column);
   }
 }
