--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,8 @@
 @import 'components/c-table';
 @import 'components/section-header';
 @import 'components/menu-flip';
+@import 'components/profileEditForm';
+@import 'components/profileEditInvoiceForm';
 
 @import 'components/backend/sidebar';
 @import 'components/backend/b-card';
