--- a/src/assets/styles/layout/_fheader.scss
+++ b/src/assets/styles/layout/_fheader.scss
@@ -9,6 +9,10 @@ $root-block-name: '.fheader';
   padding: 24px 0;
   @include flex(null, null, column);
   position: relative;
+
+  @include screen(lg) {
+    padding: 24px;
+  }
   &::after {
     content: '';
     display: block;
@@ -52,17 +56,29 @@ $root-block-name: '.fheader';
       font-size: 20px;
       @include flex(center);
       gap: 12px;
+      @include screen(lg) {
+        flex-direction: column;
+        font-size: 14px;
+      }
       &-icon {
         @include flex(center);
         font-size: 26px;
+        @include screen(lg) {
+          font-size: 22px;
+        }
       }
     }
   }
   &__btns {
     @include flex(center);
     position: absolute;
-    right: 200px;
+    right: 100px;
     bottom: 24px;
+    @include screen(lg) {
+      top: 24px;
+      right: 20px;
+      bottom: auto;
+    }
   }
   &__btn {
     @include flex(center, center);
