--- a/src/assets/styles/components/_profileEditForm.scss
+++ b/src/assets/styles/components/_profileEditForm.scss
@@ -53,6 +53,9 @@ $root-block-name: '.profileEditForm';
       min-height: 22px;
       color: #212121;
       @include flex(end);
+      & {
+        margin-bottom: 4px;
+      }
       &--required {
         &::after {
           content: '*';
@@ -64,7 +67,6 @@ $root-block-name: '.profileEditForm';
       &--error {
         color: #fe4206;
       }
-      margin-bottom: 4px;
     }
 
     &-input {
