--- a/src/assets/styles/components/_m-card.scss
+++ b/src/assets/styles/components/_m-card.scss
@@ -48,7 +48,7 @@ $root-block-name: '.mcard';
   &__header {
     padding: 16px 0;
     height: 74px;
-    background: #c2f6f6;
+    background: #6b9fd2;
 
     @include flex(center, center);
 
