--- a/src/assets/styles/components/_menu-flip.scss
+++ b/src/assets/styles/components/_menu-flip.scss
@@ -64,9 +64,9 @@ $root-block-name: '.menu-flip';
 
   &__btn {
     width: 100px;
-    border: 1px solid #f079b5;
+    border: 1px solid #6b9fd2;
     background: #fff;
-    color: #f079b5;
+    color: #6b9fd2;
     font-size: 14px;
 
     &--shutdown {
