--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -31,7 +31,7 @@ $root-block-name: '.productCard';
   }
   &__infos {
     display: flex;
-    background: #c2f6f6;
+    background: #6b9fd2;
     height: 87.54px;
 
     &-status {
