--- a/src/assets/styles/components/backend/_b-input.scss
+++ b/src/assets/styles/components/backend/_b-input.scss
@@ -27,7 +27,7 @@ $root-block-name: '.binput';
     color: #4787c7;
     border: 1px solid #e2e5ec;
     &:hover {
-      border-color: #f8cde5;
+      border-color: #6b9fd2;
     }
 
     &:focus {
