--- a/src/assets/styles/components/backend/dialog/_info-dialog.scss
+++ b/src/assets/styles/components/backend/dialog/_info-dialog.scss
@@ -56,7 +56,7 @@ $root-block-name: '.binfoDialog';
       cursor: pointer;
       transition: 0.5s;
       letter-spacing: 2px;
-      background: #f079b5;
+      background: #6b9fd2;
     }
   }
 }
