--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -5,7 +5,7 @@ $root-block-name: '.footer';
   $p__text: #{$p}__text;
   height: 308px;
   padding: 72px 0;
-  background: #c2f6f6;
+  background: #6b9fd2;
   @include w_h(100%, 100%);
 
   &__container {
