--- a/src/assets/styles/pages/_loader.scss
+++ b/src/assets/styles/pages/_loader.scss
@@ -47,7 +47,7 @@ $root-block-name: '.loader';
       @extend %slider;
       margin-left: -40px;
       width: math.div($img-width, 1.5);
-      background-color: #c2f6f6;
+      background-color: #6b9fd2;
     }
   }
 }
