--- a/src/assets/styles/components/frontend/dialog/_info-dialog.scss
+++ b/src/assets/styles/components/frontend/dialog/_info-dialog.scss
@@ -1,4 +1,4 @@
-$root-block-name: '.confirmDialog';
+$root-block-name: '.infoDialog';
 
 #{$root-block-name} {
   $p: &;
@@ -42,7 +42,6 @@ $root-block-name: '.confirmDialog';
 
   &__footer {
     width: 100%;
-    height: 198px;
     background: #6b9fd2;
     border-radius: 0 0 18px 18px;
     @include flex(null, null, column);
@@ -51,16 +50,6 @@ $root-block-name: '.confirmDialog';
     @include screen(lg) {
       height: 224px;
       padding: 16px 0;
-    }
-    &-content {
-      flex: 1;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-
-      @include screen(lg) {
-        grid-template-columns: 1fr 1fr;
-        grid-auto-rows: auto;
-      }
     }
 
     &-btns {
@@ -83,48 +72,6 @@ $root-block-name: '.confirmDialog';
       &--confirm {
         color: #fff;
         background: #2a88cb;
-      }
-    }
-
-    &-balance {
-      @include flex(center, center);
-      @include screen(lg) {
-        height: fit-content;
-        #{$p__text} {
-          font-size: 20px;
-          font-weight: 400;
-          &--red {
-            font-size: 36px;
-          }
-        }
-      }
-    }
-
-    &-count {
-      @include flex(center, center);
-      @include screen(lg) {
-        height: fit-content;
-        #{$p__text} {
-          font-size: 20px;
-          font-weight: 400;
-          &--red {
-            font-size: 36px;
-          }
-        }
-      }
-    }
-    &-total {
-      @include flex(center, center);
-      @include screen(lg) {
-        grid-column: 1/-1;
-        height: fit-content;
-        #{$p__text} {
-          font-size: 20px;
-          font-weight: 400;
-          &--red {
-            font-size: 36px;
-          }
-        }
       }
     }
   }
@@ -152,30 +99,6 @@ $root-block-name: '.confirmDialog';
   &__main {
     flex: 1;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 24px;
-    overflow: auto;
-    @include screen(lg) {
-      grid-template-columns: 1fr;
-      gap: 12px;
-    }
-  }
-
-  &__item {
-    display: flex;
-    gap: 12px;
-    &-img {
-      width: 99px;
-      height: 99px;
-
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-    &-name {
-      flex: 1;
-    }
+    padding: 48px 0;
   }
 }
