--- a/src/assets/styles/components/backend/dialog/_add-shipment-code-dialog.scss
+++ b/src/assets/styles/components/backend/dialog/_add-shipment-code-dialog.scss
@@ -1,4 +1,5 @@
-$root-block-name: '.addBannerDialog';
+$root-block-name: '.addShipmentDialog';
+
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
