--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -33,6 +33,7 @@
 @import 'components/backend/dialog/info-dialog';
 @import 'components/backend/dialog/add-banner-dialog';
 @import 'components/backend/dialog/add-redemption-code-dialog';
+@import 'components/backend/dialog/add-shipment-code-dialog';
 @import 'components/backend/b-input';
 @import 'components/backend/b-select';
 
