--- a/src/assets/styles/pages/backend/_newsManagement.scss
+++ b/src/assets/styles/pages/backend/_newsManagement.scss
@@ -1,11 +1,10 @@
-$root-block-name: '.memberManagement';
+$root-block-name: '.newsManagement';
 
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
   $p__btn: #{$p}__btn;
 
-  width: 100%;
   &__title {
     color: #6b9fd2;
     font-size: 20px;
@@ -69,15 +68,6 @@ $root-block-name: '.memberManagement';
       font-size: 18px;
       cursor: not-allowed;
       opacity: 0.7;
-    }
-  }
-
-  &__list {
-    width: 100%;
-    &-content {
-      width: 100%;
-
-      overflow: hidden;
     }
   }
 }
