--- a/src/assets/styles/pages/backend/_vendorManagement.scss
+++ b/src/assets/styles/pages/backend/_vendorManagement.scss
@@ -1,11 +1,10 @@
-$root-block-name: '.memberManagement';
+$root-block-name: '.vendorManagement';
 
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
   $p__btn: #{$p}__btn;
 
-  width: 100%;
   &__title {
     color: #6b9fd2;
     font-size: 20px;
@@ -49,7 +48,10 @@ $root-block-name: '.memberManagement';
       transition: border-color 0.3s ease, box-shadow 0.3s ease;
     }
   }
-
+  &__btns {
+    display: flex;
+    justify-content: center;
+  }
   &__btn {
     min-width: 120px;
     height: 40px;
@@ -69,15 +71,6 @@ $root-block-name: '.memberManagement';
       font-size: 18px;
       cursor: not-allowed;
       opacity: 0.7;
-    }
-  }
-
-  &__list {
-    width: 100%;
-    &-content {
-      width: 100%;
-
-      overflow: hidden;
     }
   }
 }
