--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -31,7 +31,7 @@ $root-block-name: '.productCard';
   }
   &__infos {
     display: flex;
-    background: #6b9fd2;
+    background: #c2f6f6;
     height: 87.54px;
 
     &-status {
@@ -39,7 +39,7 @@ $root-block-name: '.productCard';
 
       &--active {
         width: 100%;
-        max-width: 192px;
+        max-width: 160px;
         background: #2a88cb;
         display: flex;
         align-items: center;
@@ -61,16 +61,19 @@ $root-block-name: '.productCard';
       flex: 1;
       display: flex;
       flex-direction: column;
+      justify-content: center;
       #{$p__text} {
         color: #2a88cb;
         &--title {
           font-size: 12px;
           font-weight: 700;
+          @include line-clamp(1);
         }
 
         &--subtitle {
           font-size: 20px;
           font-weight: 700;
+          @include line-clamp(1);
         }
       }
     }
