--- a/src/assets/styles/components/frontend/dialog/_info-dialog.scss
+++ b/src/assets/styles/components/frontend/dialog/_info-dialog.scss
@@ -42,7 +42,7 @@ $root-block-name: '.infoDialog';
 
   &__footer {
     width: 100%;
-    background: #6b9fd2;
+    background: #c2f6f6;
     border-radius: 0 0 18px 18px;
     @include flex(null, null, column);
     padding: 12px 0 24px 0;
