--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -39,12 +39,13 @@
 @import 'components/backend/dialog/add-news-dialog';
 @import 'components/backend/dialog/add-store-product-dialog';
 @import 'components/backend/dialog/grant-reward-dialog';
+@import 'components/backend/dialog/product-category-management-dialog';
 @import 'components/backend/b-input';
 @import 'components/backend/b-select';
 
 @import 'components/frontend/dialog/dialog';
 @import 'components/frontend/dialog/confirm-dialog';
-@import 'components/frontend/dialog/confirm-dialog';
+@import 'components/frontend/dialog/draw-dialog';
 @import 'components/frontend/dialog/info-dialog';
 @import 'components/frontend/f-pagination';
 
@@ -67,7 +68,8 @@
 @import 'pages/loader';
 @import 'pages/mall';
 @import 'pages/mall-product';
-@import 'pages/mallCheckout';
+@import 'pages/cart';
+@import 'pages/prizeBox';
 @import 'pages/mallOrderSuccess';
 @import 'pages/no-data';
 @import 'pages/about';
