--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,10 +32,12 @@
 @import 'components/backend/dialog/confirm-dialog';
 @import 'components/backend/dialog/info-dialog';
 @import 'components/backend/dialog/add-banner-dialog';
+@import 'components/backend/dialog/add-product-dialog';
 @import 'components/backend/dialog/add-product-recommendation-dialog';
 @import 'components/backend/dialog/add-redemption-code-dialog';
 @import 'components/backend/dialog/add-shipment-code-dialog';
 @import 'components/backend/dialog/add-member-dialog';
+@import 'components/backend/dialog/add-productCategory-dialog';
 @import 'components/backend/dialog/add-news-dialog';
 @import 'components/backend/dialog/add-store-product-dialog';
 @import 'components/backend/dialog/grant-reward-dialog';
