--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -50,7 +50,7 @@
 @import 'components/frontend/dialog/draw-dialog';
 @import 'components/frontend/dialog/info-dialog';
 @import 'components/frontend/f-pagination';
-
+@import 'components/frontend/checkoutInfoForm';
 // Layout
 @import 'layout/bheader';
 @import 'layout/fheader';
