--- a/src/assets/styles/components/backend/dialog/_add-productStoreCategory-dialog.scss
+++ b/src/assets/styles/components/backend/dialog/_add-productStoreCategory-dialog.scss
@@ -1,4 +1,4 @@
-$root-block-name: '.addProductDialog';
+$root-block-name: '.addProductStoreCategoryDialog';
 
 #{$root-block-name} {
   $p: &;
@@ -7,7 +7,6 @@ $root-block-name: '.addProductDialog';
   padding: 36px;
   flex: 1;
   flex-direction: column;
-  overflow: auto;
   &__text {
     color: #4787c7;
     letter-spacing: 0.5px;
