--- a/src/assets/styles/components/backend/dialog/_product-detail-dialog.scss
+++ b/src/assets/styles/components/backend/dialog/_product-detail-dialog.scss
@@ -1,5 +1,4 @@
-$root-block-name: '.addProductDialog';
-
+$root-block-name: '.productDetailDialog';
 #{$root-block-name} {
   $p: &;
   $p__text: #{$p}__text;
