--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -50,6 +50,7 @@
 @import 'components/backend/b-select';
 
 @import 'components/frontend/dialog/dialog';
+@import 'components/frontend/dialog/animate-dialog';
 @import 'components/frontend/dialog/confirm-dialog';
 @import 'components/frontend/dialog/draw-dialog';
 @import 'components/frontend/dialog/info-dialog';
