--- a/src/assets/styles/components/backend/dialog/_add-news-dialog.scss
+++ b/src/assets/styles/components/backend/dialog/_add-news-dialog.scss
@@ -7,6 +7,7 @@ $root-block-name: '.addNewsDialog';
   padding: 36px;
   flex: 1;
   flex-direction: column;
+  overflow: auto;
   &__text {
     color: #4787c7;
     letter-spacing: 0.5px;
