--- a/src/assets/styles/pages/_fhome.scss
+++ b/src/assets/styles/pages/_fhome.scss
@@ -14,6 +14,7 @@ $root-block-name: '.fhome';
   }
 
   &__list {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 48px;
