--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -6,6 +6,8 @@ $root-block-name: '.productCard';
   $p__icon: #{$p}__icon;
   $p__img: #{$p}__img;
   $p__infos: #{$p}__infos;
+  $p__money: #{$p}__money;
+  $p__money-text: #{$p}__money-text;
   border-radius: 10px;
   overflow: hidden;
 
@@ -18,15 +20,88 @@ $root-block-name: '.productCard';
     }
   }
 
+  &__moneys {
+    position: absolute;
+    right: 8px;
+    bottom: 8px;
+    display: flex;
+    gap: 4px;
+  }
+  &__money {
+    display: flex;
+    align-items: end;
+    &-main {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+    &--gold {
+      --bg-color: #fbbc05;
+    }
+
+    &--silver {
+      --bg-color: #aeaeb2;
+    }
+
+    &--bonus {
+      --bg-color: #ff5823;
+    }
+
+    &-logo {
+      background-color: var(--bg-color);
+      color: #fff;
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      #{$p__money-text} {
+        display: block;
+        line-height: 0;
+      }
+    }
+
+    &-price {
+      #{$p__money-text} {
+        font-size: 26px;
+        font-weight: 400;
+        color: var(--bg-color);
+        display: block;
+        line-height: 0;
+      }
+    }
+
+    &-text {
+      color: #fff;
+    }
+  }
+
   &__img {
     width: 100%;
     height: 216px;
     overflow: hidden;
+    position: relative;
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       object-position: center;
+    }
+  }
+  &__stock {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #002b48;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-100%);
+    #{$p__text} {
+      font-size: 14px;
     }
   }
   &__infos {
@@ -36,7 +111,7 @@ $root-block-name: '.productCard';
 
     &-status {
       padding: 10px 20px;
-
+      position: relative;
       &--active {
         width: 100%;
         max-width: 160px;
