--- a/src/assets/styles/pages/_fhome.scss
+++ b/src/assets/styles/pages/_fhome.scss
@@ -23,6 +23,10 @@ $root-block-name: '.fhome';
       grid-template-columns: 1fr 1fr;
       gap: 6px;
     }
+    @include screen(sm) {
+      grid-template-columns: 1fr;
+      gap: 6px;
+    }
   }
 }
 
