--- a/src/assets/styles/components/_product-card.scss
+++ b/src/assets/styles/components/_product-card.scss
@@ -22,6 +22,7 @@ $root-block-name: '.productCard';
 
   &__moneys {
     position: absolute;
+    z-index: 3;
     right: 8px;
     bottom: 8px;
     display: flex;
@@ -86,6 +87,21 @@ $root-block-name: '.productCard';
     height: 216px;
     overflow: hidden;
     position: relative;
+    &::after {
+      content: '';
+      display: flex;
+      width: 100%;
+      height: 50%;
+      position: absolute;
+      z-index: 2;
+      bottom: 0;
+      left: 0;
+      background: linear-gradient(
+        180deg,
+        rgba(217, 217, 217, 0) 0%,
+        rgba(0, 0, 0, 0.9) 95.65%
+      );
+    }
     img {
       width: 100%;
       height: 100%;
@@ -99,6 +115,7 @@ $root-block-name: '.productCard';
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 3;
     background-color: #002b48;
     display: flex;
     align-items: center;
